--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "types": ["vitest/globals"]
+    // "types": ["vitest/globals"]
+    "types": ["vitest", "@testing-library/jest-dom"]
+
   }
 }
