chore: update, first it

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "setupTests.ts"]
+  "include": ["./src", "setupTests.ts"]
 }
