--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
+  // "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
   ],
   "compilerOptions": {
     // "types": ["vitest/globals"]
     "types": ["vitest", "@testing-library/jest-dom"]
-
-  }
+    
+  },
+  // "include": ["./src/**/*.ts"]
 }
