--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.34",
     "firebase": "^11.2.0",
     "jsdom": "^26.0.0",
+    "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.14"
