--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "jsdom": "^26.0.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
