--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@tanstack/react-query": "^5.66.0",
     "@types/styled-components": "^5.1.34",
     "firebase": "^11.2.0",
@@ -19,7 +20,8 @@
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
