--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scan": "^0.2.7",
     "styled-components": "^6.1.14",
     "zustand": "^5.0.3"
   },
